// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Product /> snapshots should match snapshot 1`] = `
<section
  class="styles__Container-sc-11z2e6s-0 cvKyIH"
>
  <div
    class="styles__ImagesContainer-sc-11z2e6s-1 kTpCiU"
  >
    <section
      aria-label="imagens do produto"
      class="styles__Container-sc-1rfz8de-0 cjexoL"
    >
      <div
        class="styles__FeaturedImageContainer-sc-1rfz8de-1 hkalnS"
        data-testid="container-featured-image"
      >
        <img
          alt="product 1"
          class="styles__FeaturedImage-sc-1rfz8de-2 hLfEin"
          data-testid="featured-image"
          height="1000px"
          src="image-1.jpg"
          width="1000px"
        />
      </div>
      <div
        class="styles__ImagesGrid-sc-1rfz8de-3 gtpYQD"
      >
        <div
          class="styles__Image-sc-1rfz8de-4 gGfERl active"
          data-testid="grid-image-0"
        >
          <img
            alt="product 1"
            height="176px"
            src="thumbnail 1.jpg"
            width="176px"
          />
        </div>
        <div
          class="styles__Image-sc-1rfz8de-4 gGfERl"
          data-testid="grid-image-1"
        >
          <img
            alt="product 2"
            height="176px"
            src="thumbnail 2.jpg"
            width="176px"
          />
        </div>
        <div
          class="styles__Image-sc-1rfz8de-4 gGfERl"
          data-testid="grid-image-2"
        >
          <img
            alt="product 3"
            height="176px"
            src="thumbnail 3.jpg"
            width="176px"
          />
        </div>
        <div
          class="styles__Image-sc-1rfz8de-4 gGfERl"
          data-testid="grid-image-3"
        >
          <img
            alt="product 4"
            height="176px"
            src="thumbnail 4.jpg"
            width="176px"
          />
        </div>
      </div>
    </section>
  </div>
  <div
    class="styles__DetailsContainer-sc-11z2e6s-2 haQqEv"
  >
    <section
      aria-label="descrição do produto"
      class="styles__Container-sc-ypft3n-0 hhjPNM"
    >
      <p
        class="styles__Brand-sc-ypft3n-1 eBdmJx"
      >
        brand-1
      </p>
      <h1
        class="styles__Title-sc-ypft3n-2 kFUCun"
      >
        title-1
      </h1>
      <p
        class="styles__Description-sc-ypft3n-3 jIbbAQ"
      >
        description-1
      </p>
      <div
        class="styles__PriceContainer-sc-ypft3n-4 jUenDh"
      >
        <span
          class="styles__FinalPriceContainer-sc-ypft3n-5 hXifzc"
        >
          <span
            class="styles__FinalPrice-sc-ypft3n-6 cInfIl"
          >
            $
            5.00
          </span>
          <span
            class="styles__Discount-sc-ypft3n-7 cyFKTa"
          >
            50
            %
          </span>
        </span>
        <p
          class="styles__Price-sc-ypft3n-8 gNjCoe"
        >
          $
          10.00
        </p>
      </div>
    </section>
    <div
      class="styles__ProductActionContainer-sc-11z2e6s-3 gMjTvO"
    >
      <section
        aria-label="selecione a quantidade de itens"
        class="styles__Container-sc-6vyuvp-0 klSogO"
      >
        <button
          aria-label="menos"
          class="styles__CounterButton-sc-6vyuvp-1 hNfiSo"
        >
          <icon-mock />
        </button>
        <span
          data-testid="counter"
        >
          0
        </span>
        <button
          aria-label="mais"
          class="styles__CounterButton-sc-6vyuvp-1 hNfiSo"
        >
          <icon-mock />
        </button>
      </section>
      <button
        aria-labelledby="add-btn"
        class="styles__StyledButton-sc-1csa66j-0 hmYbLP shadowActive"
      >
        <icon-mock />
         
        <span
          id="add-btn"
        >
          Add to cart
        </span>
      </button>
    </div>
  </div>
</section>
`;

exports[`<Product /> snapshots should match snapshot when data is null 1`] = `null`;

exports[`<Product /> snapshots should match snapshot when modal active 1`] = `
<section
  class="styles__Container-sc-11z2e6s-0 cvKyIH"
>
  <div
    class="styles__ImagesContainer-sc-11z2e6s-1 kTpCiU"
  >
    <section
      aria-label="imagens do produto"
      class="styles__Container-sc-1rfz8de-0 cjexoL"
    >
      <div
        class="styles__FeaturedImageContainer-sc-1rfz8de-1 hkalnS"
        data-testid="container-featured-image"
      >
        <img
          alt="product 1"
          class="styles__FeaturedImage-sc-1rfz8de-2 hLfEin"
          data-testid="featured-image"
          height="1000px"
          src="image-1.jpg"
          width="1000px"
        />
      </div>
      <div
        class="styles__ImagesGrid-sc-1rfz8de-3 gtpYQD"
      >
        <div
          class="styles__Image-sc-1rfz8de-4 gGfERl active"
          data-testid="grid-image-0"
        >
          <img
            alt="product 1"
            height="176px"
            src="thumbnail 1.jpg"
            width="176px"
          />
        </div>
        <div
          class="styles__Image-sc-1rfz8de-4 gGfERl"
          data-testid="grid-image-1"
        >
          <img
            alt="product 2"
            height="176px"
            src="thumbnail 2.jpg"
            width="176px"
          />
        </div>
        <div
          class="styles__Image-sc-1rfz8de-4 gGfERl"
          data-testid="grid-image-2"
        >
          <img
            alt="product 3"
            height="176px"
            src="thumbnail 3.jpg"
            width="176px"
          />
        </div>
        <div
          class="styles__Image-sc-1rfz8de-4 gGfERl"
          data-testid="grid-image-3"
        >
          <img
            alt="product 4"
            height="176px"
            src="thumbnail 4.jpg"
            width="176px"
          />
        </div>
      </div>
    </section>
  </div>
  <div
    class="styles__DetailsContainer-sc-11z2e6s-2 haQqEv"
  >
    <section
      aria-label="descrição do produto"
      class="styles__Container-sc-ypft3n-0 hhjPNM"
    >
      <p
        class="styles__Brand-sc-ypft3n-1 eBdmJx"
      >
        brand-1
      </p>
      <h1
        class="styles__Title-sc-ypft3n-2 kFUCun"
      >
        title-1
      </h1>
      <p
        class="styles__Description-sc-ypft3n-3 jIbbAQ"
      >
        description-1
      </p>
      <div
        class="styles__PriceContainer-sc-ypft3n-4 jUenDh"
      >
        <span
          class="styles__FinalPriceContainer-sc-ypft3n-5 hXifzc"
        >
          <span
            class="styles__FinalPrice-sc-ypft3n-6 cInfIl"
          >
            $
            5.00
          </span>
          <span
            class="styles__Discount-sc-ypft3n-7 cyFKTa"
          >
            50
            %
          </span>
        </span>
        <p
          class="styles__Price-sc-ypft3n-8 gNjCoe"
        >
          $
          10.00
        </p>
      </div>
    </section>
    <div
      class="styles__ProductActionContainer-sc-11z2e6s-3 gMjTvO"
    >
      <section
        aria-label="selecione a quantidade de itens"
        class="styles__Container-sc-6vyuvp-0 klSogO"
      >
        <button
          aria-label="menos"
          class="styles__CounterButton-sc-6vyuvp-1 hNfiSo"
        >
          <icon-mock />
        </button>
        <span
          data-testid="counter"
        >
          0
        </span>
        <button
          aria-label="mais"
          class="styles__CounterButton-sc-6vyuvp-1 hNfiSo"
        >
          <icon-mock />
        </button>
      </section>
      <button
        aria-labelledby="add-btn"
        class="styles__StyledButton-sc-1csa66j-0 hmYbLP shadowActive"
      >
        <icon-mock />
         
        <span
          id="add-btn"
        >
          Add to cart
        </span>
      </button>
    </div>
  </div>
  <section
    aria-label="modal imagens do produto"
    class="styles__Container-sc-tc5yrj-0 iYchpi"
  >
    <div
      class="styles__Modal-sc-tc5yrj-1 fuToiU"
    >
      <button
        class="styles__CloseButton-sc-tc5yrj-3 fscaYl"
        data-testid="close-button"
      >
        <icon-mock />
      </button>
      <div
        class="styles__ImageContainer-sc-tc5yrj-2 hlTyuA"
      >
        <section
          aria-label="imagens do produto"
          class="styles__Container-sc-1rfz8de-0 cjexoL"
        >
          <div
            class="styles__FeaturedImageContainer-sc-1rfz8de-1 hkalnS"
            data-testid="container-featured-image"
          >
            <img
              alt="product 1"
              class="styles__FeaturedImage-sc-1rfz8de-2 hLfEin"
              data-testid="featured-image"
              height="1000px"
              src="image-1.jpg"
              width="1000px"
            />
            <div
              class="styles__ButtonWrapper-sc-1rfz8de-5 hFyXwb"
            >
              <button
                aria-label="imagem anterior"
                class="styles__ModalButton-sc-1rfz8de-6 styles__PreviousButton-sc-1rfz8de-7 bobShG kxWovx"
              >
                <icon-mock />
              </button>
              <button
                aria-label="próxima imagem"
                class="styles__ModalButton-sc-1rfz8de-6 styles__NextButton-sc-1rfz8de-8 bobShG gUtcMk"
              >
                <icon-mock />
              </button>
            </div>
          </div>
          <div
            class="styles__ImagesGrid-sc-1rfz8de-3 gtpYQD"
          >
            <div
              class="styles__Image-sc-1rfz8de-4 gGfERl active"
              data-testid="grid-image-0"
            >
              <img
                alt="product 1"
                height="176px"
                src="thumbnail 1.jpg"
                width="176px"
              />
            </div>
            <div
              class="styles__Image-sc-1rfz8de-4 gGfERl"
              data-testid="grid-image-1"
            >
              <img
                alt="product 2"
                height="176px"
                src="thumbnail 2.jpg"
                width="176px"
              />
            </div>
            <div
              class="styles__Image-sc-1rfz8de-4 gGfERl"
              data-testid="grid-image-2"
            >
              <img
                alt="product 3"
                height="176px"
                src="thumbnail 3.jpg"
                width="176px"
              />
            </div>
            <div
              class="styles__Image-sc-1rfz8de-4 gGfERl"
              data-testid="grid-image-3"
            >
              <img
                alt="product 4"
                height="176px"
                src="thumbnail 4.jpg"
                width="176px"
              />
            </div>
          </div>
        </section>
      </div>
    </div>
  </section>
</section>
`;
